load data from 3rd party api

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
         <header>
             <button class="hamburger" data-bind="visible: hamburgerIcon, click: showOptions">&#9776;</button>
             <button class="cross" data-bind="visible: crossIcon, click: hideOptions">&#735;</button>
-            <h2 class="title">SFEATS</h2>
+            <h2 class="title">Yoga San Francisco</h2>
         </header>
         <div class="options-box" data-bind="visible: optionsBox">
-            <h3>Ice Cream Social</h3>
             <ul data-bind="foreach: venueList">
                 <li data-bind="text: name"></li>
             </ul>
