--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <h2 class="title">Yoga San Francisco</h2>
         </header>
         <div class="options-box" data-bind="visible: optionsBox">
+            <input data-bind="value: filter, valueUpdate: 'keyup'"
+                    id="text-input" type="text" placeholder="Filter studio by matching keyword">
             <ul class="list" data-bind="foreach: venueList">
                 <li class="studio" data-bind="text: name, click: $parent.setStudio, 
-                                            css : { selected: $data == $root.selectedStudio() }">
-                </li>
+                                            css : { selected: $data == $root.selectedStudio() }"></li>
             </ul>
         </div>
         <div id="map"></div>
