--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <header>
             <button class="hamburger" data-bind="visible: hamburgerIcon, click: showOptions">&#9776;</button>
             <button class="cross" data-bind="visible: crossIcon, click: hideOptions">&#735;</button>
+            <button class="refresh" data-bind="click: pageRefresh">&#10227;</button>
             <h2 class="title">Yoga San Francisco</h2>
         </header>
         <div class="options-box" data-bind="visible: optionsBox">
             <input data-bind="value: filter, valueUpdate: 'keyup'"
-                    id="text-input" type="text" placeholder="Filter studio by matching keyword">
+                    id="text-input" type="text" placeholder="Filter by matching keyword">
             <ul class="list" data-bind="foreach: filterByKeyword">
                 <li class="studio" data-bind="text: name, click: $parent.setStudio, 
                                             css : { selected: $data == $root.selectedStudio() }"></li>
